[package]
name = "chrono-bincode"
version = "0.1.0"
authors = ["fx_kirin <fx.kirin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
bincode = "1.2.1"
chrono = { version = "0.4.11", features = ["serde"] }
anyhow = "1.0.31"
